"sidebar somewhat working,fixed the ad distortion on MyAds page"

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,4 +3,10 @@
     text-align: center;
   }
 }
+body{
+  font-family: 'Raleway',sans-serif;
+}
+footer{
+  z-index: 0;
+}
 
