--- a/public/css/myads.css
+++ b/public/css/myads.css
@@ -5,7 +5,7 @@
 
 .Img {
   width: 100%;
-  height: 150px;
+  height: 60%;
 }
 
 .text {
