--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -1,62 +1,53 @@
-.sidenav {
-  font-family: 'Montserrat', sans-serif;
-  height: 70%;
-  /* Full-height: remove this if you want "auto" height */
-  width: 16%;
-  /* Set the width of the sidebar */
-  /* Fixed Sidebar (stay in place on scroll) */
-  /* Stay on top */
-  position: absolute;
-  z-index: initial ;
-  top: 10%;
-  /* Stay at the top */
-  left: 0;
-  background-color: #eaeaea;
-  /* Black */
-  /* Disable horizontal scroll */
-  padding-top: 10px;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  margin-bottom: 10%;
+body{
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
 }
-hr{
-  background-color: darkgray;
+.parent{
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 230px; /* Set the width of the sidebar */
+  position: absolute; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: -1; 
+  top: 77px; /* Stay at the top */
+  left: 0;
+  background-color:#eaeaea; /* Black */
+  padding-top: 20px;
+}
+.sidenav{
+  width:15%;
+  padding-right:0;
+  z-index: 1;
 }
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 6px 8px 6px 20px;
+  flex-direction: row;
+  width:230px;
+  padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-size: 20px;
-  color: #3d3d29;
+  font-size: 22px;
+  color: #818181;
   display: block;
+}
+.sidenav a:focus{
+  color:lightgray;
+  font-size: 27px;
+  text-decoration: underline;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: #c27d46;
-  transition: ease-in 0.1s;
+  color: orange;
 }
 
 /* Style page content */
 .main {
-  margin-left: 160px;
-  /* Same as the width of the sidebar */
+  margin-left: 160px; /* Same as the width of the sidebar */
   padding: 0px 10px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-
-  .sidenav a {
-    font-size: 16px;
-  }
-}
-@media screen and (max-width: 700px){
-  .sidenav{
-    display:none;
-  }
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
